err/iop.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/aioimaplib'...
Listing './lib/python3.5/site-packages/aioimaplib/tests'...
Listing './lib/python3.5/site-packages/aioimaplib-0.7.13.dist-info'...
Listing './lib/python3.5/site-packages/iop'...
Listing './lib/python3.5/site-packages/iop/core'...
Compiling './lib/python3.5/site-packages/iop/core/message.py'...
***   File "./lib/python3.5/site-packages/iop/core/message.py", line 17
    return f"[msgid={self.msgid}, payload={self.payload}, headers={self.headers}]"
                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iop/input'...
Compiling './lib/python3.5/site-packages/iop/input/mail.py'...
***   File "./lib/python3.5/site-packages/iop/input/mail.py", line 39
    res, data = await (await self.__connection()).uid_search('UNSEEN', f'UID {offset}:*')
                                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iop/ipc'...
Listing './lib/python3.5/site-packages/iop/output'...
Listing './lib/python3.5/site-packages/iop/process'...
Listing './lib/python3.5/site-packages/iop/runner'...
Listing './lib/python3.5/site-packages/iop-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
